--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Web Scraping with Browserless
+name: Crypto Funding Rates API
 
 on:
   schedule:
@@ -6,11 +6,8 @@ on:
   workflow_dispatch:  # Permite ejecutar manualmente
 
 jobs:
-  scrape:
+  fetch-rates:
     runs-on: ubuntu-latest
-    container:
-      image: browserless/chrome:latest  # Usa la imagen de browserless
-      options: --shm-size=2gb  # Aumenta la memoria compartida
 
     steps:
       - uses: actions/checkout@v3
@@ -23,11 +20,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests pandas beautifulsoup4 schedule supabase-py numpy
+          pip install requests pandas supabase-py numpy
 
-      - name: Run scraping script
+      - name: Run API fetching script
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-          SCRAPER_API_KEY: ${{ secrets.SCRAPER_API_KEY }}
-        run: python perpetuos.py
+        run: python funding_rates.py
