--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests pandas supabase-py numpy
+          pip install requests
+          pip install pandas
+          pip install supabase
+          pip install numpy
+          pip install python-dotenv
+          pip install postgrest
 
       - name: Run API fetching script
         env:
